* Fixed bug where the PlainRenderer would fail to render some units
* Improved performance of the UserEventCache that caches events for the logged in Users
* Improved performance of the EventManager's active events list
* Added system settings to allow Site Analytics code to be added into the HTML of all pages

*Version 2.7.2*
* Fixed bug where uploading point values was being reject as a security breach
* Fixed bug where failures during stopping a datasource could cause it to become out of sync with the UI
* Fixed bug where adding points via the Data Source discovery tools could cause a spurious pop up that would not allow saving the point
* Now able to toggle mute via HTML5 pages, still cannot play sounds though
* Fixes to Linux startup scripts for installations with spaces in the path

*Version 2.7.0*
* Added ability to configure the search path and regex for serial ports
* Fixed bug when setting Low and Medium priority thread pools to large values would cause mango to fail to restart
* Upgrading ma-priv library for better startup error logging and JVM Compatibility check
* Adding additional utility methods for extracting Regex capture groups from Strings
* Fixed bug in dataTypeOptions tag where onChange wasn't working if the onChange code was missing a ;
* Trimmed down event data that gets sent to UI via longpoll to improve performance
* Improved REST error feedback in Response headers and log file
* Upgrade Jetty to 9.2.12.v20150709
* Adding Spring Security
* Jetty JSP Engine configurable/tunable via env.properties 
* For better JSP performance set development=false if you do not need runtime compilation of JSP files
* Fixed Purge Override bug where data source purge override was not being respected.
* WebSocket Ping/Pong connection testing to ensure dead connections are cleaned up

*Version 2.6.4*
* Improved feedback for Data Point Import via CSV

*Version 2.6.2*
* Fixed MySQL bug when bulk setting data point permisisons