@@ -13,6 +13,7 @@
 * Improved performance of the UserEventCache that caches events for the logged in Users
 * Improved performance of the EventManager's active events list
 * Added system settings to allow Site Analytics code to be added into the HTML of all pages
+* Fixed bug where deleting a user linked to an email event handler would break the event handler
 
 *Version 2.7.2*
 * Fixed bug where uploading point values was being reject as a security breach
